--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -2,3 +2,18 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+
+//font
+$font1 : "NotoSansKR";
+
+//color
+$colPrimary : #66C7BB;
+$colPrimaryHover : #51b1a5;
+
+//text
+$textCol1 : #111;
+$textCol2 : #888;
+
+//size
+$pc : 1280px;
+$mobile : 720px;
