--- a/assets/common.scss
+++ b/assets/common.scss
@@ -1,6 +1,19 @@
 @charset "utf-8";
 @import "variables.scss";
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #bbb;
+  border-radius: 5px;
+  background-clip: padding-box;
+  border: 2px solid transparent;
+}
+::-webkit-scrollbar-track {
+  background-color: #eee;
+}
+
 .wrap{
   max-width: $pc;
   margin:0 auto;
