--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -3,6 +3,252 @@
 
 .maker{
   &-header{
+    height:40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom:1px solid #ebebeb;
+    a, button{
+      font-size:1.4rem;
+      margin:0 20px;
+    }
+  }
+  &-wrap{
+    display:flex;
+    min-height: calc(100vh - 40px);
+  }
+  &-left{
+    background-color: #f5f5f5;
+    width:300px;
+  }
+  &-right{
+    width:calc(100% - 300px);
+    padding:20px;
+    .btn-add{
+      font-size:1.4rem;
+      width:150px;
+      height: 40px;
+      border:1px solid #d6d6d6;
+      color:#aaa;
+      margin:0 auto;
+      display:block;
+      margin-top:20px;
+    }
+  }
+}
+
+.preview{
+  &-tit{
+    font-size:1.5rem;
+    text-align: center;
+    margin-top:10px;
+  }
+  &-img{
+    width:240px;
+    height:470px;
+    position:relative;
+    margin:10px auto;
+    img{
+      width:100%;
+      position:absolute;
+      left:0;
+      top:0;
+    }
+    .background{
+      width:calc(100% - 20px);
+      height:100%;
+      border-radius: 30px;
+      overflow:hidden;
+      top:10px;
+      left:10px;
+    }
+    .character{
+      width:180px;
+      left:calc(50% - 90px);
+      top:100px;
+    }
+    .dialogue{
+      position:absolute;
+      left:10%;
+      bottom:5px;
+      background-color: rgba(255,255,255,.8);
+      width:80%;
+      border-radius: 10px;
+      padding:22px 15px 15px;
+      font-size:1.4rem;
+      .name{
+        font-weight: 600;
+        background-color: #fff;
+        padding:2px 10px;
+        border-radius: 10px;
+        position:absolute;
+        left:0;
+        top:-10px;
+      }
+      .text{
+        margin:0;
+      }
+    }
+    .mockup{
+      pointer-events: none;
+    }
+  }
+}
+
+.asset{
+  &-tit{
+    font-size:1.5rem;
+    text-align: center;
+    margin-top:30px;
+  }
+  &-wrap{
+    width:90%;
+    margin:10px auto 20px;
+  }
+  &-tab{
+    display:flex;
+    margin:0;
+    &--tit{
+      font-size:1.4rem;
+      padding:5px 15px;
+      background-color:#ddd;
+      border-radius: 10px 10px 0 0;
+      &.active{
+        background-color:#fff;
+      }
+    }
+    &--con{
+      background-color:#fff;
+      border-radius: 0 10px 10px 10px;
+      padding:10px;
+      font-size:1.4rem;
+      height:calc(100vh - 670px);
+      min-height: 200px;
+    }
+  }
+}
+
+.cutinsert{
+  &-wrap{
+    margin-bottom:10px;
+    position:relative;
+    .btn-delete{
+      position:absolute;
+      right:13px;
+      bottom:10px;
+      font-size:1.4rem;
+      color:#f00;
+    }
+  }
+  &-top{
+    background:#d6d6d6;
+    display:flex;
+    align-items: center;
+    padding:4px 10px;
+    .input-radio{
+      margin-right:15px;
+    }
+  }
+  &-con{
+    border:1px solid #d6d6d6;
+    padding:10px 30px 0 10px;
+    display:flex;
+    flex-wrap: wrap;
+    .input-label{
+      min-width: 110px;
+    }
+    .input-textarea{
+      width:500px;
+    }
+  }
+}
+
+.input{
+  &-wrap{
+    display:flex;
+  }
+  &-label{
+    font-size:1.4rem;
+    margin-right:20px;
+  }
+  &-con{
+    margin:0 20px 10px 0;
+    .line{
+      margin-bottom:10px;
+      &:last-child{
+        margin-bottom:0;
+      }
+      & > *{
+        margin-right:20px;
+      }
+      .input-label{
+        min-width: auto;
+      }
+    }
+  }
+  &-radio{
+    display: inline-flex;
+    position: relative;
+    align-items: center;
+    margin:0;
+    cursor: pointer;
+    input[type=radio]{
+      width:0;
+      height:0;
+      position:absolute;
+      &:checked + .radio{
+        &:after{
+          content:"";
+          display:block;
+          width:9px;
+          height:9px;
+          background:#aaa;
+          border-radius: 50%;
+          position:absolute;
+          left:3px;
+          top:3px;
+        }
+      }
+    }
+    .check{
+      &.radio{
+        width:15px;
+        height:15px;
+        background:#fff;
+        display:inline-block;
+        border-radius: 50%;
+        position:relative;
+      }
+    }
+    .text{
+      font-size:1.4rem;
+      margin-left:5px;
+    }
+  }
+  &-select{
     background:#eee;
+    font-size:1.4rem;
+    padding:5px 30px 5px 10px;
+    min-width:150px;
+    background-image:url('~/static/images/icon/triangle.png');
+    background-repeat: no-repeat;
+    background-size:10px;
+    background-position:calc(100% - 10px) center;
+    outline: none;
+  }
+  &-text, &-number, &-textarea{
+    background:#eee;
+    padding:5px 10px;
+    font-size:1.4rem;
+    outline: none;
+  }
+  &-textarea{
+    resize: none;
+  }
+  &-text{
+    width:300px;
+  }
+  &-number{
+    width:70px;
   }
 }
