--- a/assets/reset.scss
+++ b/assets/reset.scss
@@ -53,6 +53,7 @@ html, body {
 
 html{
 	font-size: 10px !important;
+	color:$textCol1;
   @media (max-width: $mobile) {
     font-size: 9px !important;
   }
