--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -260,7 +260,7 @@
           margin-bottom:10px;
           &--btn{
             font-size:1.6rem;
-            margin-right:40px;
+            margin-right:35px;
             &.active{
               color:$colPrimary;
               font-weight: 600;
@@ -296,6 +296,9 @@
             border:1px solid #ccc;
             width:100%;
             margin-top:10px;
+            &::placeholder{
+              color:#ccc;
+            }
           }
         }
       }
@@ -320,6 +323,118 @@
       top:700px;
       background:#fff;
       border-radius: 10px;
+      padding:15px;
+      &-tit{
+        position:relative;
+        font-size:1.6rem;
+        border-bottom:1px solid #eee;
+        padding-bottom:15px;
+        .chapter{
+          font-size:1.2rem;
+          color:$textCol2;
+          font-weight: 300;
+          &:after, &:before{
+            content:"~";
+            display:inline-block;
+            margin:0 5px;
+          }
+        }
+        .fold-btn{
+          position:absolute;
+          right:2px;
+          top:2px;
+          font-size:1.4rem;
+          color:#1E3BB3;
+        }
+      }
+      &-list{
+        &--item{
+          border-right: 1px dashed #eee;
+          margin:10px 0;
+          padding:0 10px;
+          width:300px;
+          .tit{
+            font-size:1.4rem;
+            font-weight: 500;
+          }
+          .preview-list{
+            display:flex;
+            margin:8px 10px;
+            &--item{
+              width:40px;
+              height:40px;
+              border-radius: 50%;
+              overflow: hidden;
+              border:1px solid #aaa;
+              margin-left:-10px;
+              background:#eee;
+              display:flex;
+              align-items: center;
+              justify-content: center;
+              font-size:1.2rem;
+              img{
+                width:100%;
+              }
+            }
+          }
+          .state{
+            .badge{
+              display:inline-block;
+              font-size:1.1rem;
+              padding:3px 7px 4px;
+              border-radius: 5px;
+              color:#fff;
+              font-weight: 300;
+              min-width: 60px;
+              margin:2px;
+              &.text-bg-primary{
+                background-color:$colPrimary;
+              }
+              &.text-bg-red{
+                background-color:#EF6A6A;
+              }
+              &.text-bg-pink{
+                background-color:#E8A1A1;
+              }
+            }
+            .text{
+              font-size:1.1rem;
+              color:$textCol2;
+              margin-right:18px;
+              position:relative;
+              display:inline-block;
+              font-weight: 300;
+              &:after{
+                content:"";
+                display:block;
+                width:3px;
+                height:3px;
+                border-radius: 50%;
+                background-color:#D9D9D9;
+                position:absolute;
+                right:-12px;
+                top:7px;
+              }
+              &:last-child:after{
+                display:none;
+              }
+            }
+          }
+          .text-preview{
+            font-size:1.1rem;
+            color:$textCol2;
+            display:-webkit-box;
+            word-wrap:break-word;
+            -webkit-line-clamp:4;
+            -webkit-box-orient:vertical;
+            overflow:hidden;
+            text-overflow:ellipsis;
+            height:68px;
+            margin-top:5px;
+            font-weight: 300;
+          }
+        }
+      }
     }
   }
 }
