--- a/assets/common.scss
+++ b/assets/common.scss
@@ -127,6 +127,19 @@
       }
     }
   }
+  &.type2{
+    background-color:$colPrimary;
+    .header-logo a{
+      background:url(../static/images/logo_wh.svg)no-repeat center / auto;
+    }
+    .header-menu--item a{
+      color:#fff;
+      font-weight: 300;
+      &:hover{
+        color:#fff;
+      }
+    }
+  }
 }
 
 .main{
@@ -263,6 +276,83 @@
       }
     }
   }
+}
+
+.login{
+  min-height:calc(100vh - 70px);
+  background-color:#F4F5F7;
+  margin-top:70px;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  &-wrap{
+    background-color:rgba(255,255,255,.5);
+    font-size:1.4rem;
+    padding:50px 60px;
+    border-radius: 10px;
+    border:1px solid #ddd;
+  }
+  &-input{
+    position:relative;
+    margin:7px 0;
+    &.id, &.pass{
+      &:after{
+        content:"";
+        display:block;
+        width:20px;
+        height:20px;
+        position:absolute;
+        left:15px;
+        top:12px;
+        z-index: 1;
+        opacity: .5;
+      }
+    }
+    &.id:after{
+      background:url(~/static/images/icon/person.svg)no-repeat center / auto 100%;
+    }
+    &.pass:after{
+      background:url(~/static/images/icon/lock.svg)no-repeat center / auto 83%;
+    }
+    .input{
+      font-size:1.4rem;
+      border:1px solid #ddd;
+      padding:10px 15px 10px 45px;
+      border-radius: 10px;
+      width:250px;
+      background:#fff;
+      font:inherit;
+      &:focus {
+        outline: 1px solid $colPrimary;
+      }
+      &::placeholder{
+        color:#ccc;
+        font-weight: 300;
+      }
+    }
+  }
+  &-option{
+    display:flex;
+    margin: 10px 0 30px;
+    justify-content: space-between;
+    .join{
+      color:$colPrimary;
+    }
+  }
+  &-button{
+    width:100%;
+    height:50px;
+    background:$colPrimary;
+    color:#fff;
+    font-size:1.6rem;
+    border-radius: 10px;
+  }
+}
+
+.project{
+  min-height:calc(100vh - 70px);
+  background-color:#F4F5F7;
+  margin-top:70px;
 }
 
 .footer{
