--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -3,7 +3,7 @@
 
 .maker{
   &-header{
-    height:100px;
+    height:80px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -23,19 +23,19 @@
       .item{
         height:100%;
         .icon{
-          width:120px;
+          width:100px;
           height:100%;
           display:flex;
           align-items: center;
           justify-content: center;
           background-repeat: no-repeat;
-          background-position:50% 38%;
+          background-position:50% 34%;
           border-right:1px solid #eee;
-          padding-top:45px;
+          padding-top:37px;
           font-size:1.2rem;
           @for $i from 1 to 10{
             &-#{$i}{
-              background-image:url(~/static/images/icon/menu_#{$i}.svg);
+              background-image:url(~/static/images/icon/menu_#{$i}.png);
             }
           }
         }
@@ -45,8 +45,10 @@
             &-txt{
               color:$colSub;
             }
-            &-1{
-              background-image:url(~/static/images/icon/menu_1_active.svg);
+            @for $i from 1 to 10{
+              &-#{$i}{
+                background-image:url(~/static/images/icon/menu_#{$i}_active.png);
+              }
             }
           }
         }
@@ -55,13 +57,13 @@
   }
   &-wrap{
     display:flex;
-    min-height: calc(100vh - 100px);
+    min-height: calc(100vh - 80px);
   }
   &-left{
     background-color: #2f2f2f;
     width:240px;
-    height: calc(100vh - 100px);
-    min-height: 980px;
+    height: calc(100vh - 80px);
+    min-height: 990px;
     overflow-y:auto;
     &::-webkit-scrollbar {
       width: 8px;
@@ -134,7 +136,7 @@
         font-size:1.2rem;
         color:#fff;
         &:hover{
-          .scenario-modi, .chapter-add{
+          .scenario-modi, .chapter-add, .scenario-del{
             opacity: 1;
           }
         }
@@ -145,6 +147,9 @@
         background:url(~/static/images/icon/add.svg)no-repeat center;
         margin:10px auto;
         display:block;
+      }
+      &-del{
+        right:40px;
       }
     }
     .chapter{
@@ -182,7 +187,6 @@
     }
   }
   &-right{
-    min-width: 1685px;
     width:calc(100% - 240px);
     overflow-x:auto;
     padding:10px;
@@ -200,7 +204,7 @@
       margin-top:20px;
     }
     .preview{
-      width:365px;
+      min-width:365px;
       height:680px;
       background:#fff;
       border-radius: 10px;
@@ -214,13 +218,13 @@
         .time{
           color:$colPrimary;
           font-size:1.6rem;
-          font-weight: 600;
+          font-weight: 500;
           margin-left:10px;
         }
       }
     }
     .setting{
-      width:900px;
+      min-width:900px;
       height:680px;
       background:#fff;
       border-radius: 10px;
@@ -305,7 +309,7 @@
       &-tit{
         font-size: 1.8rem;
         padding-left:20px;
-        background:url(~/static/images/icon/menu_7.svg)no-repeat left center / 15px;
+        background:url(~/static/images/icon/setting.svg)no-repeat left center / 15px;
         margin-bottom:15px;
       }
     }
@@ -588,16 +592,17 @@
       }
     }
   }
-  &-radio{
+  &-radio, &-check{
     display: inline-flex;
     position: relative;
     align-items: center;
     margin:0;
     cursor: pointer;
-    input[type=radio]{
+    input[type=radio], input[type=checkbox]{
       width:0;
       height:0;
       position:absolute;
+      appearance: none;
       &:checked + .radio{
         &:after{
           content:"";
@@ -611,6 +616,22 @@
           top:3px;
         }
       }
+      &:checked + .checkbox{
+        border-color:$colPrimary;
+        &:after{
+          content:"";
+          display:block;
+          width:100%;
+          height:100%;
+          background-color:$colPrimary;
+          background-image:url(~/static/images/icon/check_wh.svg);
+          background-repeat: no-repeat;
+          background-position:center;
+          position:absolute;
+          left:0;
+          top:0;
+        }
+      }
     }
     .check{
       &.radio{
@@ -619,6 +640,15 @@
         background:#fff;
         display:inline-block;
         border-radius: 50%;
+        position:relative;
+      }
+      &.checkbox{
+        width:15px;
+        height:15px;
+        background:#fff;
+        display: inline-block;
+        border:1px solid #ccc;
+        border-radius: 3px;
         position:relative;
       }
     }
