--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -10,6 +10,8 @@ $font1 : "NotoSansKR";
 $colPrimary : #66C7BB;
 $colPrimaryHover : #51b1a5;
 $colSub:#EFDC2C;
+$colPink : #EA7070;
+$colBlue : #86AEEB;
 
 //text
 $textCol1 : #111;
