--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -393,7 +393,7 @@
             bottom: 5px;
             display: flex;
             width: 100%;
-            // justify-content: end;
+            justify-content: flex-end;
             padding: 10px;
 
             .btn {
