--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -345,23 +345,30 @@
           }
 
           &.type2 {
-            .tab-list--btn {
+            .tab-list--item {
               font-size: 1.4rem;
-              margin-right: 10px;
               position: relative;
-
-              &.active {
-                font-weight: 500;
-
-                &:after {
-                  content: "";
-                  display: block;
-                  width: 100%;
-                  height: 2px;
-                  background-color: $colPrimary;
-                  position: absolute;
-                  left: 0;
-                  bottom: -10px;
+              .radio{
+                cursor: pointer;
+                input[type=radio]{
+                  appearance: none;
+                  width:0;
+                  height:0;
+                  position:absolute;
+                  &:checked + span{
+                    position:relative;
+                    color:$colPrimary;
+                    &:after {
+                      content: "";
+                      display: block;
+                      width: 100%;
+                      height: 2px;
+                      background-color: $colPrimary;
+                      position: absolute;
+                      left: 0;
+                      bottom: -16px;
+                    }
+                  }
                 }
               }
             }
