--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -230,6 +230,12 @@
     display: flex;
     position: relative;
 
+    .cut-insert{
+      display:flex;
+      width: calc(100% - 365px);
+      position: relative;
+    }
+
     .btn-add {
       font-size: 1.4rem;
       width: 150px;
@@ -265,7 +271,7 @@
     }
 
     .setting {
-      min-width: 900px;
+      width: 900px;
       height: calc(100% - 55px);
       background: #fff;
       border-radius: 10px;
@@ -300,6 +306,7 @@
               align-items: center;
               justify-content: center;
               font-size: 1.2rem;
+              overflow: hidden;
             }
 
             .swiper-button-prev {
@@ -502,6 +509,30 @@
       height: 100%;
       background: #fff;
       border-radius: 10px;
+      @media (max-width: 1600px) {
+        position: fixed;
+        right: -330px;
+        bottom: 10px;
+        z-index: 1;
+        height: calc(100% - 100px);
+        border-radius: 10px 0 0 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+        transition:right .3s;
+        .btn-fold{
+          width:20px;
+          height: 20px;
+          background:url(~/static/images/icon/arrow_left.svg)no-repeat center / 13px;
+          position:absolute;
+          left:15px;
+          top:calc(50% - 10px);
+          &.active{
+            background:url(~/static/images/icon/arrow_right.svg)no-repeat center / 13px;
+          }
+        }
+        &.fold{
+          right:0;
+        }
+      }
     }
 
     .cut {
@@ -513,7 +544,6 @@
       border-radius: 10px 10px 0 0;
       padding: 15px;
       box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-      transition: all .3s;
 
       &-tit {
         position: relative;
